--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ keyrings.alt==3.0
 lazy-object-proxy==1.3.1
 MarkupSafe==1.1.0
 mccabe==0.6.1
+memory-profiler==0.55.0
 psutil==5.5.0
 pycrypto==2.6.1
 pygobject==3.26.1
